/*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//
//----------------------------------------------
//  Check protobuf version
//----------------------------------------------
//
//  Check what version of protobuf is installed (Ex. 3.7.0 on Mar 31, 2020)
//  //third-party/java/protobuf
//
//  Install `protoc` of the same version as above (Ex. 3.7.0 )
//  http://google.github.io/proto-lens/installing-protoc.html
//
//----------------------------------------------
//  Install of protobuf version 3.7.0
//----------------------------------------------
//   PROTOC_ZIP=protoc-3.7.0-osx-x86_64.zip
//   curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.7.0/$PROTOC_ZIP
//   sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
//   sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
//   rm -f $PROTOC_ZIP
//----------------------------------------------
//
//
//----------------------------------------------
//  Generate command
//----------------------------------------------
//
//      protoc --java_out=src-gen/ \
//      --java_opt=annotate_code \
//      --plugin=protoc-gen-grpc-java=third-party/java/grpc/protoc-gen-grpc-java-1.10.1-osx-x86_64.exe \
//      --grpc-java_out=src/ \
//      --proto_path=src/com/facebook/buck/workertool/resources/proto \
//      worker_tool.proto \
//      && yes | rm src-gen/com/facebook/buck/workertool/model/*.meta
//
//-----------------------
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.workertool.model";
option java_outer_classname = "WorkerToolProto";

// best practices to include version number in package
package workertool.api.v1;

message CommandTypeMessage {
    CommandType command_type = 1;

    enum CommandType {
        UNKNOWN = 0;
        EXECUTE_COMMAND = 1;
        START_PIPELINE_COMMAND = 2;
        SHUTDOWN_COMMAND = 3;
    }
}

message ExecuteCommand {
    string action_id = 1;
}

message StartPipelineCommand {
    repeated string action_id = 1;
}

message ShutdownCommand {
}
